@@ -139,17 +139,40 @@ public class AdminService {
     }
 
     // 키워드 search
-    public List<AdminResponse.CompanyKeywordList> serarchKeyword(String keyword){
+    public List<AdminResponse.CompanyKeywordList> serarchCompanyKeyword(String keyword){
         List<Company> companyList;
         if (keyword.isBlank()){
             companyList = companyRepository.findAll();
         } else{
             companyList = companyRepository.findAllKeyword(keyword);
         }
-        return companyList.stream().map(AdminResponse.CompanyKeywordList::new).collect(Collectors.toList());
+        return companyList.stream().map(AdminResponse.CompanyKeywordList::new).toList();
     }
 
-    
+    // 키워드 search 유저
+    public List<AdminResponse.UserListDTO> adminSearchUserList(String keyword){
+        List<User> userList;
+        if (keyword.isBlank()){
+            userList = userRepository.findAll();
+        }else {
+            userList =  userRepository.findAllKeyword(keyword);
+        }
+        return userList.stream().map(AdminResponse.UserListDTO::new).toList();
+    }
+    @Transactional
+    //키워드 search 신고
+    public List<AdminResponse.ReportList> adminsearchReportList(String keyword){
+        List<Report> reportList;
+
+        if (keyword.isBlank()){
+            reportList = reportRepository.findAllWithReviewAndUserAndStay();
+        }else {
+            reportList = reportRepository.findAllKeyword(keyword);
+        }
+
+        return reportList.stream().map(report -> new AdminResponse.ReportList(report,report.getReview())).toList();
+    }
+
     // 특정 기업의 정보 상세보기
     public AdminResponse.CompanyDetailDTO adminCompanyDetail(Integer companyId) {
         Optional<Company> companyOP = companyRepository.findById(companyId);
@@ -327,6 +350,43 @@ public class AdminService {
         }).collect(Collectors.toList());
     }
 
+    // 키워드 search
+    public List<AdminResponse.CompanyQuestionListDTO> searchQuestionKeyword(SessionAdmin sessionUser, String keyword){
+        if (sessionUser == null){
+            new Exception400("로그인이 필요한 서비스입니다");
+        }
+
+        List<Question> questionList;
+
+        if (keyword.isBlank()){
+            questionList = questionRepository.companyQuestionList();
+        } else {
+            questionList = questionRepository.findAllKeyword(keyword);
+        }
+
+        return questionList.stream().map(question -> {
+            Company company = companyRepository.findById(question.getCompany().getId())
+            .orElseThrow(() -> new Exception404("해당 기업을 찾을 수 업습니다."));
+            return new AdminResponse.CompanyQuestionListDTO(company,question);
+        }).toList();
+
+    }
+
+    // 키워드 faq search
+    public List<AdminResponse.adminFaqListDTO> searchFaqKeyword(SessionAdmin sessionUser, String keyword){
+        if (sessionUser == null){
+            new Exception400("로그인이 필요한 서비스입니다");
+        }
+        List<Faq> faqList;
+
+        if (keyword.isBlank()){
+            faqList =  faqRepository.findAll();
+        }else{
+            faqList = faqRepository.findAllKeyword(keyword);
+        }
+        return faqList.stream().map(AdminResponse.adminFaqListDTO::new).toList();
+    }
+
 
     //[기업 문의사항 리스트]
     public List<AdminResponse.CompanyQuestionListDTO> adminCompanyQuestionList(SessionAdmin sessionUser){
@@ -403,6 +463,7 @@ public class AdminService {
         return resultList;
     }
 
+
     //[FAQ 디테일]
     @Transactional
     public AdminResponse.adminFaqDetail adminFaqDetail(Integer faqId, SessionAdmin sessionUser){
@@ -435,6 +496,7 @@ public class AdminService {
         faqRepository.save(reqDTO.toEntity(admin));
 
     }
+
 
 
 
